# Deep-Hedging

./: .gitignore  Deep Hedging  LICENSE  Quant WGAN TCN.ipynb  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
deephedge/: __init__.py  hedger.py  pricer.py
deephedge/augmentation/: __init__.py  gan.py  generator.py  tcn.py  trainer.py
deephedge/data/: __init__.py  download.py  windows.py
deephedge/instruments/: __init__.py  base.py  options.py  stocks.py
deephedge/nn/: __init__.py  black_scholes.py  features.py  gru_hedger.py  mlp_hedger.py  no_transaction_band.py  risk_measures.py
deephedge/preprocessing/: __init__.py  lambert.py  pipeline.py
deephedge/utils/: __init__.py  metrics.py  plotting.py
docs/: conf.py  index.rst
docs/api/: augmentation.rst  hedger.rst  instruments.rst  nn.rst
docs/tutorials/: deep_hedging.rst  wgan_datagen.rst
examples/: 01_quickstart.py  02_wgan_training.py  03_deep_hedging_european_call.py  04_parameter_sweep.py
examples/notebooks/: quickstart.ipynb  wgan_evaluation.ipynb
tests/: conftest.py  test_augmentation.py  test_data.py  test_hedger.py  test_instruments.py  test_nn.py  test_preprocessing.py  test_pricer.py  test_utils.py
