[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deephedge"
dynamic = ["version"]
description = "Deep Hedging with WGAN-GP data augmentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "yfinance>=0.2.40",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "black", "ruff", "mypy"]
docs = ["sphinx", "sphinx-autodoc-typehints", "furo"]

[tool.hatch.version]
path = "deephedge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["deephedge"]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
